--- a/content/posts/gsoc-2018.md
+++ b/content/posts/gsoc-2018.md
@@ -10,20 +10,18 @@ This is a post to identify what I've done in Google Summer of Code 2018. It's su
 
 Links to what I've done:
 
-1. [In-detail post about OpenWhisk performance improvement prototype.](https://tz70s.github.io/posts/openwhisk-performance-improvement/)
-2. [Main repo/branch for prototype.](https://github.com/tz70s/incubator-openwhisk/tree/whisk-future-rebase)
-3. [Invoker agent repo/branch for prototype.](https://github.com/tz70s/incubator-openwhisk-deploy-kube/tree/refactor-invoker-agent)
+1. [In-detail post about OpenWhisk performance improvement experiment.](https://tz70s.github.io/posts/openwhisk-performance-improvement/)
+2. [Main repo/branch for experiment.](https://github.com/tz70s/incubator-openwhisk/tree/whisk-future-rebase)
+3. [Invoker agent repo/branch for experiment.](https://github.com/tz70s/incubator-openwhisk-deploy-kube/tree/refactor-invoker-agent)
 4. [Commits on OpenWhisk main repo during GSoC progress.](https://github.com/apache/incubator-openwhisk/commits/master?author=tz70s)
 
 ## The Journey
 
-At first, my original [GSoC proposal]() is not in the right direction because of less consideration and familiarity with OpenWhisk codebase. Things are getting more complex after proposals raised from folks; it makes me struggle to write the real production code without a consistent directions. I think communities are nowadays getting closer to future architecture, but it still needs time to clear all issues. 
+At first, my original [GSoC proposal: OpenWhisk performance improvement - work stealing, priority-based scheduling on load balancer and direct connection for streaming capabilities.](https://summerofcode.withgoogle.com/projects/#5174720182353920) is not in the right direction because of less consideration and familiarity with OpenWhisk codebase. During the first period, the performance improvement issues are getting more complex after few proposals raised from folks; it's hard to write the real production code without a consistent direction. However, I think communities are nowadays getting closer to future architecture, but it still needs time to clear most of known issues. 
 
 Therefore, I've proposed a mid-ground prototype experiment aproximate 3000 lines of code changes for exploring any issues on OpenWhisk future architecture: latency gains, performance bottleneck, migration path, resiliency, etc. Not that comprehensive, but hope to stand for exploring what we should further concerned and what we get missed. It's also nice to make myself to learn from existing codebase and getting more familiar to follow up fast moves from talents in OpenWhisk community.
 
-However, I think my overall performance is poor during GSoC progress, no excuse. Thanks my mentors Rodric and Carlos and other OpenWhisk community members for patient helps and code reviews. I appreciate for this chance and learn a lot. I'll keep track, investigate and contribute to OpenWhisk as best as I can.
-
 ## Future improvement and plans
-1. I'll do some supplement works on improving existing OpenWhisk codebase by fixing bugs and improve tests, i.e. some thing I've found during the experiment progress: tracing support, invoker-agent, kube-related calls, etc.
+1. I'll do some supplement works on improving existing OpenWhisk codebase by fixing bugs and improve tests, i.e. some issues I've found during the experiment progress: tracing support, invoker-agent, kube-related calls, etc.
 2. Improve this experiment and discuss with community.
-3. Keep contributing to OpenWhisk.
+3. Make the performance improvement real.
