--- a/content/posts/gsoc-2018.md
+++ b/content/posts/gsoc-2018.md
@@ -17,7 +17,7 @@ Links to what I've done:
 
 ## The Journey
 
-At first, my original [GSoC proposal: OpenWhisk performance improvement - work stealing, priority-based scheduling on load balancer and direct connection for streaming capabilities.](https://summerofcode.withgoogle.com/projects/#5174720182353920) is not in the right direction because of less consideration and familiarity with OpenWhisk codebase. During the first period, the performance improvement issues are getting more complex after few proposals raised from folks; it's hard to write the real production code without a consistent direction. However, I think communities are nowadays getting closer to future architecture, but it still needs time to clear most of known issues. 
+At first, my original [GSoC proposal: OpenWhisk performance improvement - work stealing, priority-based scheduling on load balancer and direct connection for streaming capabilities.](https://summerofcode.withgoogle.com/projects/#5174720182353920) is not in the right direction because of less consideration and familiarity with OpenWhisk codebase. During the first period, the performance improvement issues are getting more complex after few proposals raised from folks [1](https://cwiki.apache.org/confluence/display/OPENWHISK/OpenWhisk+future+architecture?src=contextnavpagetreemode)[2](https://cwiki.apache.org/confluence/display/OPENWHISK/Autonomous+Container+Scheduling)[3](https://cwiki.apache.org/confluence/display/OPENWHISK/Clustered+Singleton+Invoker+for+HA+on+Mesos); it's hard to write the real production code without a consistent direction. However, I think communities are nowadays getting closer to future architecture, but it still needs time to clear most of known issues. 
 
 Therefore, I've proposed a mid-ground prototype experiment aproximate 3000 lines of code changes for exploring any issues on OpenWhisk future architecture: latency gains, performance bottleneck, migration path, resiliency, etc. Not that comprehensive, but hope to stand for exploring what we should further concerned and what we get missed. It's also nice to make myself to learn from existing codebase and getting more familiar to follow up fast moves from talents in OpenWhisk community.
 
