--- a/content/posts/gsoc-2018.md
+++ b/content/posts/gsoc-2018.md
@@ -13,7 +13,8 @@ Links to what I've done:
 1. [In-detail post about OpenWhisk performance improvement experiment.](https://tz70s.github.io/posts/openwhisk-performance-improvement/)
 2. [Main repo/branch for experiment.](https://github.com/tz70s/incubator-openwhisk/tree/whisk-future-rebase)
 3. [Invoker agent repo/branch for experiment.](https://github.com/tz70s/incubator-openwhisk-deploy-kube/tree/refactor-invoker-agent)
-4. [Commits on OpenWhisk main repo during GSoC progress.](https://github.com/apache/incubator-openwhisk/commits/master?author=tz70s)
+4. [Extended multi-actions wrk peformance bench.](https://github.com/tz70s/whisk-wrk-bench)
+5. [Commits on OpenWhisk main repo during GSoC progress.](https://github.com/apache/incubator-openwhisk/commits/master?author=tz70s)
 
 ## The Journey
 
